# luasocket

./: BlurrrNotes.txt  CMakeLists.txt
Android/: InitialCacheAndroid.cmake  build.gradle  settings.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
Android/luasocket/: build.gradle
Android/luasocket/src/main/: AndroidManifest.xml
Android/testapp/: build.gradle
Android/testapp/src/main/: AndroidManifest.xml
Android/testapp/src/main/cpp/: TestAppLib.c
Android/testapp/src/main/java/org/libsdl/testapp/: MainActivity.java
Android/testapp/src/main/res/layout/: activity_main.xml
Android/testapp/src/main/res/values/: strings.xml
AndroidCMake/: Android.mk  InitialCache_Android.cmake  README.txt  make_ndk.sh
CMakeModules/: InitialCache_Lua_f32i32_iOS.cmake  iOS.toolchain.cmake
src/: CMakeLists.txt
src/mime/: CMakeLists.txt
src/unix/: CMakeLists.txt
